# imagen-manager

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.playwright-cli/: page-2026-02-22T16-33-18-812Z.yml
app/: auth.py  config.py  main.py  models.py
app/api/: routes.py
app/core/: account_pool.py  browser.py  generator.py  http_generator.py  semaphore.py  video_generator.py  video_tasks.py
app/utils/: storage.py
docs/plans/: 2026-02-10-imagen-api-design.md
gemini-imagen/: .gitignore  SKILL.md  USAGE_EXAMPLES.md  gemini_imagen.py
static/: cookies.html
tests/: test_account_pool.py  test_api.py  test_video_generator_submit_match.py  test_video_request_validation.py
